# res-forecasting

./: .gitignore  README.md  pyproject.toml
config/: photovoltaic.yaml  wind_offshore.yaml  wind_onshore.yaml
experiments/: evaluation.ipynb  test.ipynb
mlres/: dataset.py  train.py  tune.py
mlres/modules/: layers.py  networks.py
